--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
     <!-- Core MLOps Tools -->
-    <h2 class="text-2xl font-semibold mb-6">Core MLOps Tools 🤖</h2>
+    <h2 class="text-2xl font-semibold mb-6">Core MLOps Tools </h2>
 
     <!-- Experiment Tracking & Model Registry -->
     <h3 class="text-xl font-semibold mb-4">Experiment Tracking & Model Registry</h3>
@@ -114,10 +114,7 @@
         <img src="https://avatars.githubusercontent.com/u/26401354?s=200&v=4" alt="Weights & Biases" class="logo-img mx-auto" />
         <p class="mt-2">W&B</p>
       </div>
-      <div class="bg-gray-800 p-4 rounded-xl text-center logo-card">
-        <img src="https://neptune.ai/static/img/neptune_logo/neptune_logo.png" alt="Neptune.ai" class="logo-img mx-auto" />
-        <p class="mt-2">Neptune.ai</p>
-      </div>
+     
     </div>
 
     <!-- Data Versioning & Management -->
@@ -167,7 +164,7 @@
     </div>
 
     <!-- Cloud -->
-    <h2 class="text-2xl font-semibold mb-6">Cloud Platforms ☁️</h2>
+    <h2 class="text-2xl font-semibold mb-6">Cloud Platforms </h2>
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-6">
       <div class="bg-gray-800 p-4 rounded-xl text-center logo-card">
         <img src="https://a0.awsstatic.com/libra-css/images/logos/aws_logo_smile_1200x630.png" alt="AWS" class="logo-img mx-auto" />
